[package]
name = "prglass"
version = "0.1.0"

[dependencies]
github-rs = { git = "https://github.com/mgattozzi/github-rs", default-features = false, features = ["rust-native-tls"] }
serde = "^1.0.8"
serde_derive = "^1.0.8"
serde_json = "1.0"
git2 = "0.7"
config = { version = "0.9" }
lazy_static = "1.1.0"